--- a/src/components/CreateButon/createTodoButton.css
+++ b/src/components/CreateButon/createTodoButton.css
@@ -1,23 +1,28 @@
+:root{
+    --dark-bg-color: #faf9f8;
+    --clean-bg-color: white;
+    --text-color: black;
+    --subTitle: #b8b8b8;
+}
+
 .btnAdd{
     border-radius: 100%;
     height: 70px;
     width: 70px;
     border: none;
-    background-color: #e91e63;
+    background-color: #2564cf;
     color: #FFFFFF;
     font-size: 32px;
-    grid-column: 1 / 7;
-    grid-row: 4 / 5;
+    grid-column: 7 / 8;
+    grid-row: 6 / 7;
     justify-self: center;
     align-self: center;
     box-shadow: 0px 0px 30px -5px white;
     transition: all .3s;
+    z-index: 1;
 }
 
 .btnAdd-open{
-    z-index: 1;
-    transform: translateX(200%) rotateZ(45deg);
-    position: fixed;
-    top: 20px;
+    transform: rotateZ(135deg);
 }
 
