--- a/src/components/TodoCounter/TodoCounter.css
+++ b/src/components/TodoCounter/TodoCounter.css
@@ -1,7 +1,18 @@
+:root{
+    --dark-bg-color: #faf9f8;
+    --clean-bg-color: white;
+    --text-color: black;
+    --subTitle: #b8b8b8;
+}
+
 .TodoCounterTitle{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 72px;
+    font-size: 45px;
     text-align: center;
-    grid-column: 1 / 7;
-    grid-row: 1 / 4;
+    color: var(--text-color);
+    margin: auto 0;
+    justify-self: center;
+    align-self: center;
+    /* grid-column: 1 / 7;
+    grid-row: 1 / 4; */
 }
