--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -1,46 +1,58 @@
+:root{
+    --dark-bg-color: #faf9f8;
+    --clean-bg-color: white;
+    --text-color: black;
+    --subTitle: #b8b8b8;
+}
+
 li {
     list-style: none;
 }
 
-.todoItem{
-    border: solid gray;
-    border-radius: 10px;
-    height: 56px;
+.todoItem {
     display: grid;
-    margin: 20px 10px;
-    padding: 10px;
+    height: 52px;
     grid-template-columns: 30px 1fr 30px;
     gap: 10px;
     align-items: center;
+    margin: 10px 0px;
+    padding: 0 10px;
+    box-sizing: border-box;
+    box-shadow: 0px 0.3px 0.9px rgb(0 0 0 / 10%), 0px 1.6px 3.6px rgb(0 0 0 / 10%);
+    border-radius: 10px;
+    background-color: var(--clean-bg-color);
 }
 
 .todoItem-Text{
-    font-size: 18px;
+    font-size: 16px;
     line-height: 24px;
     font-weight: 400;
+    color: var(--text-color);
 }
 
 .checkTodo{
     text-align: center;
-    width: 24px;
-    height: 24px;
-    border-radius: 5px;
+    width: 20px;
+    height: 20px;
+    border-radius: 100%;
     border: 1px solid gray;
     cursor: pointer;
 }
+
 .deleteTodo{
     text-align: center;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     border-radius: 100%;
-    background-color: white;
+    background-color: var(--dark-bg-color);
     cursor: pointer;
-    font-size: 24px;
+    font-size: 14px;
     font-weight: 900;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.205);
     position: relative;
     top: 0;
 }
+
 .deleteTodo:hover{
     color: red;
     box-shadow: 0px 0px 10px rgba(255, 0, 0, 0.205);
@@ -48,12 +60,12 @@ li {
 }
 
 .checkTodo-complete{
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 .todoItem-complete {
     text-decoration: line-through;
-    opacity: 0.5;
+    opacity: 0.6;
 
 }
   
