--- a/src/components/TodoList/TodoList.css
+++ b/src/components/TodoList/TodoList.css
@@ -1,18 +1,24 @@
+:root{
+    --dark-bg-color: #faf9f8;
+    --clean-bg-color: white;
+    --text-color: black;
+    --subTitle: #b8b8b8;
+}
+
 .TodoList{
-    grid-column: 1 / 7;
-    grid-row: 6 / 7;
+    grid-column: 2 / 8;
+    grid-row: 1 / 7;
     overflow: auto;
-    height: calc(calc(100vh / 6) * 6);
+    /* height: 20px; */
     border-radius:20px ;
-    background-color: #FFFFFF;
-    box-shadow: 0px -10px 20px #00000050;
+    /* background-color: #FFFFFF; */
     padding: 50px 20px;
     position: relative;
     transition: all .5s;
 }
 
 
-.TodoListOpen{
+/* .TodoListOpen{
     transform: translateY( calc(calc(100vh / 6) * -4.5));
 }
 
@@ -32,4 +38,4 @@
     top: 0;
     box-shadow: 0px 0px 10px #00000040;
     height: 35px;
-}
+} */
