--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@ body {
   margin: 0;
   padding: 0;
   background: #2d2d2d;
-  color: #1E1E1F;
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 
@@ -10,14 +9,14 @@ body {
   /* padding: 0 24px; */
   position: relative;
   height: 100vh;
-  width: 390px;
-  border-radius: 20px;
-  background-color: #FFFFFF;
-  border: solid;
+  width: 100vw;
+  background-color: #faf9f8;
   margin: 0 auto;
   overflow: hidden;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(6, calc(100vh / 6));
+  grid-template-columns:290px repeat(6, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  /* grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(6, calc(100vh / 6)); */
 }
