--- a/src/components/TodoCounter/TodoCounter.css
+++ b/src/components/TodoCounter/TodoCounter.css
@@ -1,15 +1,10 @@
-:root{
-    --dark-bg-color: #faf9f8;
-    --clean-bg-color: white;
-    --text-color: black;
-    --subTitle: #b8b8b8;
-}
+@import url(../../index.css);
 
 .TodoCounterTitle{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 45px;
     text-align: center;
-    color: var(--text-color);
+    color: var(--items-text-color);
     margin: auto 0;
     justify-self: center;
     align-self: center;
