--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -1,9 +1,5 @@
-:root{
-    --dark-bg-color: #faf9f8;
-    --clean-bg-color: white;
-    --text-color: black;
-    --subTitle: #b8b8b8;
-}
+@import url(../../index.css);
+
 
 li {
     list-style: none;
@@ -27,7 +23,7 @@ li {
     font-size: 16px;
     line-height: 24px;
     font-weight: 400;
-    color: var(--text-color);
+    color: var(--items-text-color);
 }
 
 .checkTodo{
