--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,13 +1,10 @@
-:root{
-    --dark-bg-color: #faf9f8;
-    --clean-bg-color: white;
-    --text-color: black;
-    --subTitle: #b8b8b8;
-}
+@import url(../../index.css);
 
 .menuContainer{
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
     display: grid;
-    width: 100%;
+    width: 290px;
     height: 100%;
     box-sizing: border-box;
     background-color: var(--clean-bg-color);
@@ -60,4 +57,70 @@
 
 .menu-item-text{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--items-text-color);
+}
+
+
+
+.btnMenu {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    display: grid;
+    width: 24px;
+    height: 24px;
+    align-content: center;
+    grid-auto-rows: 4px;
+    gap: 4px;
+    /* border: solid; */
+    margin: 10px;
+    padding: 15px;
+    border-radius: 100%;
+    box-shadow: 0px 0.3px 0.9px rgb(0 0 0 / 20%), 0px 1.6px 3.6px rgb(0 0 0 / 20%);
+    cursor: pointer;
+}
+
+.btnMenu-line{
+    background-color: var(--items-text-color);
+    width: 100%;
+    height: 100%;
+}
+
+.hiddenMenu {
+    display: none;
+    width: 0;
+}
+
+.btn-color-black{
+    color: var(--text-color);
+}
+
+
+
+@media (max-width: 800px) {
+    .btnMenu{
+        z-index: 1;
+
+    }
+    .menuContainer{
+        grid-column: 1 / 2;
+        z-index: 1;
+        background-color: var(--clean-bg-color);
+        position: fixed;
+        width: 290px;
+    }
+
+    .btnMenu-line{
+        background-color: var(--text-color);
+    }
+
+    .btn-color-black{
+        background-color: var(--items-text-color);
+    }
+    
+}
+
+@media (min-width: 800px) {
+    /* .btnMenu{
+        display: none;
+    } */
 }
