--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,36 @@
+/* :root{
+  --dark-bg-color: #faf9f8;
+  --clean-bg-color: white;
+  --text-color: black;
+  --subTitle: #b8b8b8;
+  --primary-color :#2564cf;
+
+} */
+
+/* :root{
+  --dark-bg-color: #0d1117;
+  --clean-bg-color: #161b22;
+  --text-color: white;
+  --subTitle: #b8b8b8;
+  --primary-color :#2564cf;
+
+} */
+
+:root{
+  --dark-bg-color: #faf9f8;
+  --clean-bg-color: white;
+  --text-color: white;
+  --items-text-color: #0d1117;
+  --subTitle: #b8b8b8;
+  --primary-color :#2564cf;
+
+}
+
 body {
   margin: 0;
   padding: 0;
   background: #2d2d2d;
+  color: var(--text-color);
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
 }
 
@@ -10,13 +39,25 @@ body {
   position: relative;
   height: 100vh;
   width: 100vw;
-  background-color: #faf9f8;
+  background-color: var(--dark-bg-color);
   margin: 0 auto;
   overflow: hidden;
   box-sizing: border-box;
   display: grid;
-  grid-template-columns:290px repeat(6, 1fr);
+  grid-template-columns:auto repeat(6, 1fr);
   grid-template-rows: repeat(6, 1fr);
   /* grid-template-columns: repeat(6, 1fr);
   grid-template-rows: repeat(6, calc(100vh / 6)); */
+}
+
+@media (max-width: 800px) {
+
+  #root {
+    background-image: url("https://images.saymedia-content.com/.image/ar_3:2%2Cc_limit%2Ccs_srgb%2Cfl_progressive%2Cq_auto:eco%2Cw_960/MTkyNjYzMTEwNjYxMTg2OTk2/aesthetic-mac-wallpapers.jpg");
+    background-position: center;
+    background-size: cover;
+    display: grid;
+    grid-template-columns:2px 1fr;
+    grid-template-rows: repeat(6, 1fr);
+  }
 }
