--- a/src/components/Cigarettes/cigarettes.css
+++ b/src/components/Cigarettes/cigarettes.css
@@ -1,82 +1,32 @@
 @import url(../../index.css);
 
 
-.titleCigarettes{
-    padding: 50px 20px;
-    color: var(--items-text-color);
-
-}
 
 .cigarettesContainer{
     grid-column: 2 / 8;
     grid-row: 1 / 7;
     overflow: auto;
-    border-radius:20px ;
+    /* border-radius:20px ; */
     /* padding: 50px 20px; */
     position: relative;
     transition: all .5s;
-}
-
-.cigarettes-grid {
+    background-color: white;
     display: grid;
-    border-radius: 10px;
-    background-color: rgb(255 255 255 / 13%);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(80px);
-    height: 100%;
-    width: 80%;
-    grid-template-rows: 1fr 1fr 2fr;
-    margin: auto;
-    box-sizing: border-box;
-    padding: 10px;
-    /* box-shadow: 0px 0px 10px #00000059; */
+    grid-template-rows: 150px 1fr 1fr;
+    align-items: center;
+    color: var(--items-text-color);
+    overflow-x: hidden;
 }
 
-.cigarettes-today{
-    border: 6px solid var(--primary-color);
+
+
+
+.titleCigarettes{
+
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    color: var(--primary-color);
-    justify-self: center;
-    font-size: 60px;
-    font-weight: bold;
-
-}
-
-.cigarettes-controls{
-    /* border: solid; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-    height: 70px;
-}
-
-.btn{
-    height: 45px;
-    border: none;
-    padding: 0px 20px;
-    border-radius: 5px;
-}
-
-.btn-add {
-    background-color: var(--primary-color);
-    color: var(--clean-bg-color);
-    font-weight: 600;
-}
-
-.btn-minus {
-    border: 2px solid rgba(255, 0, 0, 0.455);
-    /* color: rgba(255, 0, 0, 0.455); */
-}
-
-
-.cigarettes-stats{
-    padding: 20px;
-    border-radius: 10px;
-    
+    color: var(--items-text-color);
+    font-size: 40px;
+    font-weight: 900;
+    margin: 10px;
 }
